--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     <servlet>
+        <servlet-name>Login</servlet-name>
+        <servlet-class>controllers.Login</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>Register</servlet-name>
         <servlet-class>controllers.Register</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>HomeUrl</servlet-name>
+        <servlet-class>urls.HomeUrl</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>IndexUrl</servlet-name>
@@ -12,10 +20,26 @@
         <servlet-name>Logout</servlet-name>
         <servlet-class>controllers.Logout</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Friends</servlet-name>
+        <servlet-class>controllers.Friends</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Add</servlet-name>
+        <servlet-class>controllers.Add</servlet-class>
+    </servlet>
     <!-- **************************************************************** -->
+    <servlet-mapping>
+        <servlet-name>Login</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Register</servlet-name>
         <url-pattern>/register</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HomeUrl</servlet-name>
+        <url-pattern>/home</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>IndexUrl</servlet-name>
@@ -25,6 +49,17 @@
         <servlet-name>Logout</servlet-name>
         <url-pattern>/logout</url-pattern>
     </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>Friends</servlet-name>
+        <url-pattern>/friends</url-pattern>
+    </servlet-mapping>
+        
+    <servlet-mapping>
+        <servlet-name>Add</servlet-name>
+        <url-pattern>/add</url-pattern>
+    </servlet-mapping>
+    
     <session-config>
         <session-timeout>
             30
